<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/searchdesign"
            android:drawableEnd="@drawable/ic_baseline_search_24"
            android:hint="@string/search_music"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#fff" />

        <ImageView
            android:id="@+id/mic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/imagetextsample"
            android:src="@drawable/ic_baseline_mic_24"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/getDataBtn"
        android:background="@drawable/maingradiant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Store Song"
        app:layout_constraintTop_toBottomOf="@id/relative" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        app:layout_constraintTop_toBottomOf="@+id/getDataBtn"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/relativemain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/maingradiant"
            app:layout_constraintTop_toBottomOf="@+id/toolbarCurrentSong"
            tools:layout_editor_absoluteX="0dp">

            <ImageView
                android:id="@+id/imageCurrentSong"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/imagecurrentsongimg"
                android:src="@drawable/splashscreen" />

            <TextView
                android:id="@+id/textCurrentSongName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageCurrentSong"
                android:layout_centerHorizontal="true"
                android:text="@string/song_name_current_song"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textArtistCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textCurrentSongName"
                android:layout_centerHorizontal="true"
                android:text="@string/artist_currentpagesong"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/addToFavourite"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/textCurrentSongName"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:contentDescription="@string/favclickcurrent"
                android:src="@drawable/heart" />

            <RelativeLayout
                android:id="@+id/RelativeSeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/addToFavourite"
                android:layout_marginTop="20dp">

                <SeekBar
                    android:id="@+id/seekbarCurrentSong"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/textStartSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/textEndSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/RelativeSeek"
                android:layout_margin="16dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/btnPreviousCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/prev_Current"
                    android:src="@drawable/ic_baseline_skip_previous_24" />

                <ImageView
                    android:id="@+id/btn10SecBackCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/_10sec_Current"
                    android:src="@drawable/ic_baseline_replay_10_24" />

                <ImageView
                    android:id="@+id/btnPlayCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/play_Current"
                    android:src="@drawable/ic_baseline_play_arrow_24" />

                <ImageView
                    android:id="@+id/btnPauseCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/pause_current"
                    android:src="@drawable/ic_baseline_pause_24" />

                <ImageView
                    android:id="@+id/btn10SecNextCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/_10secfor_Current"
                    android:src="@drawable/ic_baseline_forward_10_24" />

                <ImageView
                    android:id="@+id/btnNextCurrent"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/next_Current"
                    android:src="@drawable/ic_baseline_skip_next_24" />

            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>