<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/imageCurrentLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/splashscreen"
            android:contentDescription="@string/imagecurrentimage" />

        <TextView
            android:id="@+id/textTitleCurrentDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/imageCurrentLayout"
            android:text="@string/song_name_favourite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitleCurrentDesign"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imageCurrentLayout"
            android:text="@string/artist_favourite" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>