<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/recyclergradiant"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recyclergradiant">

        <ImageView
            android:id="@+id/imageHomeLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/imagesettings"
            android:src="@drawable/splashscreen" />

        <TextView
            android:id="@+id/textTitleDesignHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="40dp"
            android:layout_toEndOf="@id/imageHomeLayout"
            android:text="@string/sample_text_design"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artistDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitleDesignHome"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imageHomeLayout"
            android:text="@string/artist_design" />

        <ImageView
            android:id="@+id/favlayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite_border" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>