<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/imageFavLayout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/favimagesample"
            android:src="@drawable/splashscreen" />

        <TextView
            android:id="@+id/textTitleFavDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/imageFavLayout"
            android:text="@string/song_name_favourite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favArtist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitleFavDesign"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imageFavLayout"
            android:text="@string/artist_favourite" />

        <ImageView
            android:id="@+id/ImgFavDesign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite" />

        <ImageView
            android:id="@+id/ImgFavBorderLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_favorite_border"
            android:visibility="gone" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>